feat(frontend): Add web ui
